# bibi

./: README.md  pyproject.toml
src/bibi/: __init__.py  app.py  art.py  arxiv.py  cli.py  clipboard.py  config.py  library.py  vim.py
src/bibi/screens/: add_arxiv.py  add_entry.py  add_pdf.py  confirm_delete.py  edit_tags.py  entry_detail.py
