[project]
name = "bibi"
version = "0.1.0"
description = "A vim-keybound TUI for bibliography management"
readme = "README.md"
authors = [
    { name = "shthgml", email = "92657104+soh3e@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "textual>=8.2.8",
]

[project.scripts]
bibi = "bibi.app:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
